# bot_emissao_nfe

./: .gitignore  LICENSE  README.md  bot.py  bot_lib.py  config.py  dados.py  exec.bat  gui.py  pyproject.toml  requirements.txt  teste.ipynb
base/: CPF_filial.xlsx  CPF_matriz.xlsx
