[project]
name = "bot-emissao-nfe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "botcity-framework-core>=1.2.1",
    "botcity-framework-web>=0.10.0",
    "customtkinter>=5.2.2",
    "easygui>=0.98.3",
    "pandas>=2.2.3",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.11.1",
    "unidecode>=1.3.8",
    "webdriver-manager>=4.0.2",
]
