[project]
name = "bot-emissao-nfe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "botcity-framework-core>=1.2.1",
    "botcity-framework-web>=0.10.0",
    "customtkinter>=5.2.2",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.9",
    "unidecode>=1.3.8",
    "webdriver-manager>=4.0.2",
]
